# news-board

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rustfmt.toml
admin-api/: Cargo.toml
admin-api/src/: main.rs
db-schema/: 01-init.sql  Cargo.toml
db-schema/sql/: 01-init.sql
db-schema/src/: models.rs  schema.rs
helm/news-board/: Chart.yaml  sql  values.yaml
helm/news-board/sql/: 01-init.sql
helm/news-board/templates/news-api/: configmap.yaml  deployment.yaml  service.yaml
helm/news-board/templates/postgres/: configmap.yaml  secrets.yaml  service.yaml  stateful-set.yaml
helm/news-board/values/: dev.yaml
news-api/: Cargo.toml  Dockerfile  build.rs
news-api/src/: app_state.rs  endpoints.rs  infrastructure.rs  lib.rs  main.rs  mappers.rs  services.rs  settings.rs  utils.rs
news-api/src/auth/: auth_interceptor.rs  consts.rs  reflection_middleware.rs
news-api/src/endpoints/: auth.rs  news.rs
proto/: auth.proto  news.proto
