[workspace]
resolver = "2"
members = [
    "news-api",
    "db-schema",
]

[workspace.dependencies]
anyhow = "1.0.86"
config = "0.14.0"
chrono = "0.4.38"
tonic = "0.12.3"
prost = "0.13.3"
rand = "0.8.5"
bcrypt = "0.15.1"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
diesel = { version =  "2.2.4", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
tonic-build = "0.12.3"
tower = "0.5.1"
serde = { version = "1.0.214", features = ["derive"] }