[package]
name="admin-api"
version="0.0.1"
edition="2021"
license = "MIT"

[dependencies]
db-schema = { path = "../db-schema" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }