[package]
name="news-api"
version="0.0.1"
edition="2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }