[package]
name="news-api"
version="0.0.1"
edition="2021"
license = "MIT"

[dependencies]
db-schema = { path = "../db-schema" }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
rand = { workspace = true }
bcrypt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }